--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,4 @@
 *.fbx filter=lfs diff=lfs merge=lfs -text
+BestActiveRegdollAsset.unitypackage filter=lfs diff=lfs merge=lfs -text
+ProjectFiles filter=lfs diff=lfs merge=lfs -text
+.unitypackage filter=lfs diff=lfs merge=lfs -text
